fix: text wrap for pixelart

--- a/src/components/main/sections/projects-preview/projects-preview.scss
+++ b/src/components/main/sections/projects-preview/projects-preview.scss
@@ -95,6 +95,7 @@ $description-color: aquamarine;
   // Mobile screen
   @media (max-width: 639px) {
     width: 60%;
+    top: 25%;
 
     &.memeable-home-img {
       left: 0%;
@@ -142,7 +143,7 @@ $description-color: aquamarine;
 
   // Mobile screen
   @media (max-width: 639px) {
-    width: 80%;
+    width: 90%;
   }
 }
 
